--- a/src/main/resources/templates/initialPassword.html
+++ b/src/main/resources/templates/initialPassword.html
@@ -116,8 +116,9 @@
                         dataType: 'json',
                         contentType: 'application/json',
                         success: function (data) {
-                            alert(data.message)
-                            if(data.httpStatus === 200) window.location.href = '/login'
+                            Util.alert(data.message).then(() => {
+                                if(data.httpStatus === 200) window.location.href = '/login'
+                            })
                         },
                         error: function (xhr, status, error) {
                             console.error('Error getting password:', error);
@@ -150,8 +151,9 @@
                         dataType: 'json',
                         contentType: 'application/json',
                         success: function (data) {
-                            alert(data.message)
-                            if(data.httpStatus === 200) window.location.href = '/login'
+                            Util.alert(data.message).then(() => {
+                                if(data.httpStatus === 200) window.location.href = '/login'
+                            })
                         },
                         error: function (xhr, status, error) {
                             console.error('Error getting password:', error);
