--- a/src/main/resources/templates/bbs/faq/index.html
+++ b/src/main/resources/templates/bbs/faq/index.html
@@ -32,6 +32,7 @@
     <script th:src="@{'/assets/js/page/faq.index.js'}"></script>
     <script th:inline="javascript">
 
+        const postId = /*[[${id}]]*/ null;
         const type = /*[[${type}]]*/ []
         const user = /*[[${user}]]*/ {};
         const postList = /*[[${postList}]]*/ [];
@@ -70,23 +71,25 @@
         }
 
         function deleteBbsctt(id){
-            const result = confirm("삭제 하시겠습니까?")
-            if(result) {
-                $.ajax({
-                    type: "DELETE",
-                    url: `/api/post/${id}`,
-                    success: function (response) {
-                        if (response['httpStatus'] === 200) {
-                            alert("게시글이 삭제되었습니다.")
-                            getList()
+            Util.confirm("삭제 하시겠습니까?").then((isOk) => {
+                if(isOk) {
+                    $.ajax({
+                        type: "DELETE",
+                        url: `/api/post/${id}`,
+                        success: function (response) {
+                            if (response['httpStatus'] === 200) {
+                                Util.alert("게시글이 삭제되었습니다.").then(() => {
+                                    window.location.href = `/bbs/${postId}`
+                                })
+                            }
+                        },
+                        error: function (error) {
+                            // Handle the error response
+                            console.error("upload error:", error);
                         }
-                    },
-                    error: function (error) {
-                        // Handle the error response
-                        console.error("upload error:", error);
-                    }
-                });
-            }
+                    });
+                }
+            })
         }
 
         function editBbsctt(id){
