--- a/src/main/resources/templates/bbs/free/view.html
+++ b/src/main/resources/templates/bbs/free/view.html
@@ -165,23 +165,25 @@
         })
 
         function deleteAnswer(id) {
-            const result = confirm("삭제 하시겠습니까?")
-            if(result) {
-                $.ajax({
-                    type: "DELETE",
-                    url: `/api/answer/${id}`,
-                    success: function (response) {
-                        if (response['httpStatus'] === 200) {
-                            alert("답변이 삭제되었습니다.")
-                            window.location.href = `/bbs/view/${post['id']}`
+            Util.confirm("삭제 하시겠습니까?").then((isOk) => {
+                if(isOk){
+                    $.ajax({
+                        type: "DELETE",
+                        url: `/api/answer/${id}`,
+                        success: function (response) {
+                            if (response['httpStatus'] === 200) {
+                                Util.alert("답변이 삭제되었습니다.").then(() => {
+                                    window.location.href = `/bbs/view/${post['id']}`
+                                })
+                            }
+                        },
+                        error: function (error) {
+                            // Handle the error response
+                            console.error("upload error:", error);
                         }
-                    },
-                    error: function (error) {
-                        // Handle the error response
-                        console.error("upload error:", error);
-                    }
-                });
-            }
+                    });
+                }
+            })
         }
 
         function editAnswer(id) {
@@ -196,7 +198,6 @@
                     }
                 },
                 error: function(error) {
-                    // Handle the error response
                     console.error("upload error:", error);
                 }
             });
@@ -214,13 +215,13 @@
                 contentType: "application/json",
                 success: function(response) {
                     if(response.httpStatus === 200){
-                        alert("답변이 등록되었습니다.")
-                        $("#saveAnswerModal").modal("hide")
-                        window.location.href = `/bbs/view/${post['id']}`
+                        Util.alert("답변이 등록되었습니다.").then(() => {
+                            $("#saveAnswerModal").modal("hide")
+                            window.location.href = `/bbs/view/${post['id']}`
+                        })
                     }
                 },
                 error: function(error) {
-                    // Handle the error response
                     console.error("upload error:", error);
                 }
             });
@@ -238,13 +239,13 @@
                 contentType: "application/json",
                 success: function(response) {
                     if(response.httpStatus === 200){
-                        alert("답변이 수정되었습니다.")
-                        $("#editAnswerModal").modal("hide")
-                        window.location.href = `/bbs/view/${post['id']}`
+                        Util.alert("답변이 수정되었습니다.").then(() => {
+                            $("#editAnswerModal").modal("hide")
+                            window.location.href = `/bbs/view/${post['id']}`
+                        })
                     }
                 },
                 error: function(error) {
-                    // Handle the error response
                     console.error("upload error:", error);
                 }
             });
@@ -299,24 +300,25 @@
         }
 
         $("#delete-btn").on("click", function(e) {
-            console.log("delete-btn clicked...")
-            const result = confirm("삭제 하시겠습니까?")
-            if(result) {
-                $.ajax({
-                    type: "DELETE",
-                    url: `/api/post/${post['id']}`,
-                    success: function (response) {
-                        if (response['httpStatus'] === 200) {
-                            alert("게시글이 삭제되었습니다.")
-                            window.location.href = `/bbs/${post['typeId']}`
+            Util.confirm("삭제 하시겠습니까?").then((isOk) => {
+                if(isOk) {
+                    $.ajax({
+                        type: "DELETE",
+                        url: `/api/post/${post['id']}`,
+                        success: function (response) {
+                            if (response['httpStatus'] === 200) {
+                                Util.alert("게시글이 삭제되었습니다.").then(() => {
+                                    window.location.href = `/bbs/${post['typeId']}`
+                                })
+                            }
+                        },
+                        error: function (error) {
+                            // Handle the error response
+                            console.error("upload error:", error);
                         }
-                    },
-                    error: function (error) {
-                        // Handle the error response
-                        console.error("upload error:", error);
-                    }
-                });
-            }
+                    });
+                }
+            })
         })
 
         $("#list-btn").on("click", function(e){
