--- a/src/main/resources/templates/bbs/qna/save.html
+++ b/src/main/resources/templates/bbs/qna/save.html
@@ -69,10 +69,11 @@
         $(document).ready(function(){
 
             $("#list-btn").on("click", function(e){
-                const result = confirm("작성 정보가 저장되지 않을수도 있습니다." + '\n' + "목록으로 돌아가시겠습니까?")
-                if(result) {
-                    window.location.href = `/bbs/${type['postTypeId']}`
-                }
+                Util.confirm(`작성 정보가 저장되지 않을수도 있습니다. <br/> 목록으로 돌아가시겠습니까?`).then((isOk) => {
+                    if(isOk) {
+                        window.location.href = `/bbs/${type['postTypeId']}`
+                    }
+                })
             })
 
             window.addEventListener("load", function() {
@@ -83,7 +84,7 @@
                         form.classList.add("was-validated")
                     } else {
                         event.preventDefault();
-                        if(ckEditor.getData().length === 0) alert("내용을 입력해주세요.")
+                        if(ckEditor.getData().length === 0) Util.alert("내용을 입력해주세요.", 'w')
                         else {
                             const obj = {
                                 'title' : $("#title").val(),
@@ -101,8 +102,9 @@
                                 contentType: "application/json",
                                 success: function(response) {
                                     if(response.httpStatus === 200){
-                                        alert("저장되었습니다.")
-                                        window.location.href = `/bbs/${type['postTypeId']}`
+                                        Util.alert("저장되었습니다.").then(() => {
+                                            window.location.href = `/bbs/${type['postTypeId']}`
+                                        })
                                     }
                                 },
                                 error: function(error) {
