--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -3,6 +3,7 @@
     <script th:src="@{'/assets/js/bootstrap/bootstrap.bundle.min.js'}"></script>
     <script th:src="@{'/assets/js/core/util.js'}"></script>
     <script th:src="@{'/assets/js/feather/feather.js'}"></script>
+    <script th:src="@{'/assets/js/sweetalert2/sweetalert2.js'}"></script>
     <script th:src="@{'/assets/js/ckeditor/ckeditor-37.0.1.js'}"></script>
     <script th:src="@{'/assets/js/ckeditor/MyUploadAdapter.js'}"></script>
     <script th:src="@{'/assets/js/core/file.js'}"></script>
