--- a/src/main/resources/templates/manager/coupon.html
+++ b/src/main/resources/templates/manager/coupon.html
@@ -433,26 +433,29 @@
                return $(this).data('user')
            }).get();
 
-           const obj = {'couponId': requestCouponId, 'requestId': lst, 'userId': user}
-
-           $.ajax({
-               type: 'PUT',
-               url: `/api/coupon-request-approve`,
-               dataType: 'json',
-               data: JSON.stringify(obj),
-               contentType: 'application/json',
-               success: function (data) {
-                   if (data.httpStatus === 200) {
-                       alert(`${data.message}명의 요청을 승인했습니다.`)
-                       window.location.href = '/manager/coupon'
-                   } else {
-                       alert(`죄송합니다. 요청 승인에 실패했습니다.`)
+           if(lst.length === 0) Util.alert('승인할 사용자 요청을 선택하세요.', 'w')
+           else {
+               const obj = {'couponId': requestCouponId, 'requestId': lst, 'userId': user}
+               $.ajax({
+                   type: 'PUT',
+                   url: `/api/coupon-request-approve`,
+                   dataType: 'json',
+                   data: JSON.stringify(obj),
+                   contentType: 'application/json',
+                   success: function (data) {
+                       if (data.httpStatus === 200) {
+                           Util.alert(`${data.message}명의 요청을 승인했습니다.`).then(() => {
+                               window.location.href = '/manager/coupon'
+                           })
+                       } else {
+                           Util.alert(`죄송합니다. 요청 승인에 실패했습니다.`, 'w')
+                       }
+                   },
+                   error: function (xhr, status, error) {
+                       console.error('Error getting password:', error);
                    }
-               },
-               error: function (xhr, status, error) {
-                   console.error('Error getting password:', error);
-               }
-           });
+               });
+           }
        })
 
        /* 사용자 쿠폰 발급 모달 창 -> 쿠폰발급 버튼 클릭 이벤트 */
@@ -462,56 +465,61 @@
                return $(this).val()
            }).get();
 
-           const obj = {'couponId': chooseCouponId, 'userId': lst}      // 체크된 사용자들에게 쿠폰 발급
-           $.ajax({
-               type: 'POST',
-               url: `/api/coupon-has-user`,
-               dataType: 'json',
-               data: JSON.stringify(obj),
-               contentType: 'application/json',
-               success: function (data) {
-                   if (data.httpStatus === 200) {
-                       alert(`총 ${data.message}명에게 ${chooseCouponId}번 쿠폰이 지급되었습니다.`)
-                       window.location.href = '/manager/coupon'
-                   } else {
-                       alert(`죄송합니다. 쿠폰 발급에 실패했습니다.`)
+           if(lst.length === 0) Util.alert('쿠폰을 발급할 사용자를 선택하세요.', 'w')
+           else {
+               const obj = {'couponId': chooseCouponId, 'userId': lst}      // 체크된 사용자들에게 쿠폰 발급
+               $.ajax({
+                   type: 'POST',
+                   url: `/api/coupon-has-user`,
+                   dataType: 'json',
+                   data: JSON.stringify(obj),
+                   contentType: 'application/json',
+                   success: function (data) {
+                       if (data.httpStatus === 200) {
+                           Util.alert(`총 ${data.message}명에게 ${chooseCouponId}번 쿠폰이 지급되었습니다.`).then(() => {
+                               window.location.href = '/manager/coupon'
+                           })
+                       } else {
+                           Util.alert(`죄송합니다. 쿠폰 발급에 실패했습니다.`, 'w')
+                       }
+                   },
+                   error: function (xhr, status, error) {
+                       console.error('Error getting password:', error);
                    }
-               },
-               error: function (xhr, status, error) {
-                   console.error('Error getting password:', error);
-               }
-           });
+               });
+           }
        })
 
        /* 쿠폰 삭제하기 */
        $(".coupon-delete-btn").on('click', function(e) {
            const couponId = $(this).val()
 
-           const result = confirm('해당 쿠폰을 삭제하시겠습니까?')
-           if(result) {
-               $.ajax({
-                   type: "DELETE",
-                   url: `/api/coupon/${couponId}`,
-                   success: function (data) {
-                       if(data.httpStatus === 200) {
-                           alert(`${data.message}`)
-                           window.location.href = `/manager/coupon`
-                       }else {
-                           alert("삭제에 실패했습니다.")
+           Util.confirm('해당 쿠폰을 삭제하시겠습니까?').then((isOk) => {
+               if(isOk) {
+                   $.ajax({
+                       type: "DELETE",
+                       url: `/api/coupon/${couponId}`,
+                       success: function (data) {
+                           if(data.httpStatus === 200) {
+                               Util.alert(`${data.message}`).then(() => {
+                                   window.location.href = `/manager/coupon`
+                               })
+                           }else {
+                               Util.alert("삭제에 실패했습니다.", 'w')
+                           }
+                       },
+                       error: function (error) {
+                           // Handle the error response
+                           console.error("upload error:", error);
                        }
-                   },
-                   error: function (error) {
-                       // Handle the error response
-                       console.error("upload error:", error);
-                   }
-               });
-           }
+                   });
+               }
+           })
        })
 
        /* 쿠폰 수정하기 버튼 클릭 이벤트 */
        $(".coupon-update-btn").on('click', function(e){
            const couponId = $(this).val()
-           console.log("update couponId : ", couponId)
 
            $.ajax({
                type: 'GET',
@@ -537,32 +545,34 @@
 
        /* 쿠폰 등록하기 모달 닫기 이벤트 */
        $("#cancel-new-coupon-btn, #close-new-coupon-modal-btn").on("click", function(e) {
-           const result = confirm("작성중인 쿠폰은 저장되지 않습니다." + '\n' + "쿠폰작성을 취소하시겠습니까?")
-           if(result) {
-               $("#new-couponName").val('')
-               $("#new-couponRate").val('')
-               $("#new-startDate").val('')
-               $("#new-endDate").val('')
+           Util.confirm("작성중인 쿠폰은 저장되지 않습니다. <br/> 쿠폰작성을 취소하시겠습니까?").then((isOk) => {
+               if(isOk) {
+                   $("#new-couponName").val('')
+                   $("#new-couponRate").val('')
+                   $("#new-startDate").val('')
+                   $("#new-endDate").val('')
 
-               const form = document.getElementById("new-coupon-form")
-               form.classList.remove("was-validated")      // validation 지우기
-               $("#new-coupon-modal").modal('hide')
-           }
+                   const form = document.getElementById("new-coupon-form")
+                   form.classList.remove("was-validated")      // validation 지우기
+                   $("#new-coupon-modal").modal('hide')
+               }
+           })
        })
 
         /* 쿠폰 수정하기 모달 닫기 이벤트 */
        $("#cancel-update-coupon-btn, #close-update-coupon-modal-btn").on("click", function(e){
-           const result = confirm("수정중이던 쿠폰은 저장되지 않습니다." + '\n' + "쿠폰수정을 취소하시겠습니까?")
-           if(result) {
-               $("#update-couponName").val('')
-               $("#update-couponRate").val('')
-               $("#update-startDate").val('')
-               $("#update-endDate").val('')
+           Util.confirm(`수정중이던 쿠폰은 저장되지 않습니다. <br/> 쿠폰수정을 취소하시겠습니까?`).then((isOk) => {
+               if(isOk) {
+                   $("#update-couponName").val('')
+                   $("#update-couponRate").val('')
+                   $("#update-startDate").val('')
+                   $("#update-endDate").val('')
 
-               const form = document.getElementById("update-coupon-form")
-               form.classList.remove("was-validated")      // validation 지우기
-               $("#update-coupon-modal").modal('hide')
-           }
+                   const form = document.getElementById("update-coupon-form")
+                   form.classList.remove("was-validated")      // validation 지우기
+                   $("#update-coupon-modal").modal('hide')
+               }
+           })
        })
 
        /* 쿠폰 등록하기 */
@@ -580,7 +590,7 @@
                        const start = new Date(obj['startDate'])
                        const end = new Date(obj['endDate'])
 
-                       if(start > end) alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.")       // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
+                       if(start > end) Util.alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.", 'w')       // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
                        else {
                            $.ajax({
                                type: 'POST',
@@ -590,10 +600,11 @@
                                contentType: 'application/json',
                                success: function (data) {
                                    if (data.httpStatus === 200) {
-                                       alert(`쿠폰이 추가되었습니다.`)
-                                       window.location.href = '/manager/coupon'
+                                       Util.alert(`쿠폰이 추가되었습니다.`).then(() => {
+                                           window.location.href = '/manager/coupon'
+                                       })
                                    } else {
-                                       alert(`쿠폰 등록에 실패했습니다.`)
+                                       Util.alert(`쿠폰 등록에 실패했습니다.`, 'w')
                                    }
                                },
                                error: function (xhr, status, error) {
@@ -621,7 +632,7 @@
                        const start = new Date(obj['startDate'])
                        const end = new Date(obj['endDate'])
 
-                       if(start > end) alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.")   // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
+                       if(start > end) Util.alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.", 'w')   // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
                        else {
                            $.ajax({
                                type: 'PUT',
@@ -631,10 +642,11 @@
                                contentType: 'application/json',
                                success: function (data) {
                                    if (data.httpStatus === 200) {
-                                       alert("쿠폰 정보를 변경하였습니다.")
-                                       window.location.href = `/manager/coupon`
+                                       Util.alert("쿠폰 정보를 변경하였습니다.").then(() => {
+                                           window.location.href = `/manager/coupon`
+                                       })
                                    } else {
-                                       alert("쿠폰 변경에 실패했습니다.")
+                                       Util.alert("쿠폰 변경에 실패했습니다.", 'w')
                                    }
                                },
                                error: function (xhr, status, error) {
